# PF

./: .gitignore  README.md  start-all.bat
python-detector/: app.py  requirements.txt  test_model.py
react-frontend/: package-lock.json  package.json
react-frontend/public/: index.html
react-frontend/src/: App.css  App.js  index.css
rust-backend/: Cargo.toml
rust-backend/src/: blur.rs  main.rs  models.rs
